# zero-copy-conv

./: .gitignore  CMakeLists.txt  README.md  compile_flags.txt  config.file.sample  run.sh  setup.cfg
data/: conv.pkl  conv_layers.csv  conv_parameters.csv  filtered-conv.csv
docker/: Dockerfile  README.md
end-to-end/: benchmark_models.py  compile_flags.txt  filter_models.py  get_onnx_model.py  graph_performance.py  make_graphs.sh  run_onnx_model.py  run_torch_model.py  summarize_performance.py  summarize_performance_end_to_end.py
include/: utils.hpp
kernels/: readme.md
kernels/kernel01/: CMakeLists.txt  driver.cpp  kernel-opt.c  kernel.c  kernel_conv_im2col.c
kernels/kernel01/include/: utils.hpp
kernels/kernel01/src/: driver_conv_im2col.cpp  driver_conv_naive.cpp  kernel_conv_naive.c
kernels/kernel02/: driver.cpp  kernel-opt.c
output/kernel01/: kernel-opt.ll  kernel-opt.s  kernel-opt.txt  kernel.ll  kernel.txt
output/kernel02/: kernel-opt.ll  kernel-opt.s  kernel-opt.txt  kernel.ll  kernel.s  kernel.txt
python/: yaconv.py
scripts/: benchmark_runner.sh  compile-kernel.sh  filter_csv.py  output-summary.py  summarize_correctness.py  summarize_performance.py  timm_convolution_extraction.py  yaconv.py  zero_copy_conv.py
single-conv/: CMakeLists.txt  README.md
single-conv/data/: conv_layers.csv  conv_layers_all.csv  conv_layers_timm.csv  conv_layers_torch.csv  conv_layers_yaconv_supported.csv  examples-for-perf.csv
single-conv/include/: utils.hpp
single-conv/scripts/: benchmark_runner.sh  convolution_extraction.py  filter_csv.py  graph-performance.py  graph_heuristic.py  graph_performance.py  learn-heuristic.py  learn_heuristic.py  make_graphs.sh  summarize_correctness.py  summarize_performance.py  summarize_profiler.py  timm_convolution_extraction.py  zero_copy_conv.py
single-conv/src/: driver.cpp  driver_libtorch.cpp  driver_onednn_any.cpp  driver_onednn_nhwc.cpp  kernel_conv_im2col.c  kernel_conv_naive.c  kernel_conv_yaconv.c  kernel_conv_zero_copy.c  utils.cpp  verify_correctness.cpp
src/: driver.cpp  driver_conv_im2col.cpp  driver_conv_naive.cpp  driver_conv_naive_yaconv.cpp  driver_conv_yaconv.cpp  driver_conv_yaconv_prepack.cpp  driver_conv_yaconv_v2.cpp  driver_onednn.cpp  driver_onednn_any.cpp  driver_onednn_nhwc.cpp  kernel_conv_im2col.c  kernel_conv_libtorch.cpp  kernel_conv_naive.c  kernel_conv_naive_yaconv.c  kernel_conv_yaconv.c  kernel_conv_yaconv_prepack.c  kernel_conv_yaconv_v2.c  kernel_conv_zero_copy.c  utils.cpp  verify_correctness.cpp
util/: benchmark_runner.sh  generate_csv.py  summarize_output.py  summarize_performance.py  timm_convolution_extraction.py  yaconv.py
